docs/.vitepress/theme/styles/custom.css
/* overrides */
.VPLink {
  text-transform: capitalize;
}

.vp-doc h2 {
  margin: 15px 0 0;
  padding-top: 10px;
  border-top: none;
}

.vp-doc h3,h4,h5 {
  margin: 10px 0 0;
}

.vp-doc h4 {
  font-size: 18px;
}

.VPDoc .content-container img {
  border-radius: 5px;
}

@media (min-width: 960px) {
  .VPHome .tagline {
    font-size: 20px;
    line-height: 32px;
  }
}

/* slim scroll bar for windows based web browsers - works on firefox */
* {
  scrollbar-color: var(--vp-c-gutter) var(--vp-button-alt-bg);
  scrollbar-width: thin;
}

/* slim scroll bar for windows based web browsers - works on chrome, edge, and safari */
::-webkit-scrollbar {
  width: 8px;
  height: 8px;
}

/* scrolling handle */
::-webkit-scrollbar-thumb {
  background: var(--vp-c-gutter);
}

/* handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: var(--vp-button-alt-hover-bg);
}

/* scrolling track/backgronund color */
::-webkit-scrollbar-track {
  background: var(--vp-button-alt-bg);
}

/* mathjax3.css */
mjx-container {
  display: inline-block;
  margin: auto 2px -2px;
}

mjx-container > svg {
  margin: auto;
}

.text-color-red {
  --color-red: 254 45 70;
  --tw-text-opacity: 1;
  color: rgb(var(--color-red)/var(--tw-text-opacity));
}

.text-color-orange {
  --color-orange: 255 102 0;
  --tw-text-opacity: 1;
  color: rgb(var(--color-orange)/var(--tw-text-opacity));
}

.text-color-yellow {
  --color-yellow: 250 169 14;
  --tw-text-opacity: 1;
  color: rgb(var(--color-yellow)/var(--tw-text-opacity));
}

.text-color-gray {
  --color-gray: 145 149 163;
  --tw-text-opacity: 1;
  color: rgb(var(--color-gray)/var(--tw-text-opacity));
}

.mr-\[6px\] {
  margin-right: 6px;
}

/* display-control */
@media (width > 1279px) {
  .hidden-on-large {
    display: none;
  }
}

.home-greeting {
  color: var(--vp-c-text-2);
  font-size: 18px;
  line-height: 24px;
  padding-bottom: 12px;
}

